--- a/src/styles/country.scss
+++ b/src/styles/country.scss
@@ -6,11 +6,15 @@
   width: 100%;
   height: 100vh;
 }
+.active-container {
+  background-color: $vdark-blue-bg;
+}
 .btn-back {
   height: 150px;
   width: 100%;
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   button {
     margin-left: 60px;
     width: 100px;
@@ -22,19 +26,31 @@
     border: none;
     box-shadow: 1px 1px 1px 1px $dgrey;
   }
+  button {
+    .active {
+      background-color: $vdark-blue-bg !important;
+    }
+  }
 }
 .container-country {
   display: flex;
   width: 100%;
   height: 100%;
-  background-color: $white
+  background-color: $white;
+}
+.active-container {
+  background-color: $vdark-blue-bg;
+  color: $white;
+}
+.active {
+  background-color: $dark-blue !important;
 }
 .flag {
   height: 100%;
   width: 40%;
   display: flex;
   align-items: flex-start;
-  padding-left: 60px
+  padding-left: 60px;
 }
 .flag-img {
   width: 300px;
@@ -70,9 +86,12 @@
     flex-flow: column;
   }
 }
-.title-info{
-  color:$vdark-blue-txt;
-  font-weight:600!important;
-  font-size:14px;
-  padding-right:5px
+.title-info {
+  color: $vdark-blue-txt;
+  font-weight: 600 !important;
+  font-size: 14px;
+  padding-right: 5px;
+}
+.active-title {
+  color: $white;
 }
