--- a/src/styles/country.scss
+++ b/src/styles/country.scss
@@ -100,11 +100,34 @@
 }
 .border {
   margin-top: 60px;
-  height: 150px;
+  margin-bottom: 60px;
   width: 100%;
   display: flex;
   align-items: center;
   justify-content: flex-start;
+  button {
+    margin-right: 5px;
+  }
+}
+.item-border {
+  // width:90px;
+  display: flex !important;
+  flex-wrap: wrap !important;
+  // height:30px
+}
+.title-text-alignment {
+  width: 100%;
+  height: 100%;
+  display: flex !important;
+  flex-flow: row !important;
+  align-items: center;
+  justify-content: center;
+}
+.info-name {
+  color: $vdark-blue-txt;
+  font-weight: 800;
+  font-size: 20px;
+  padding: 10px;
 }
 @media screen and (max-width: 700px) {
   .container-country {
@@ -113,12 +136,16 @@
   .info {
     width: 100%;
     height: 100%;
+    padding-top: 20px;
 
     div {
       height: 100%;
       flex-flow: column;
       padding-left: 10px;
     }
+  }
+  .flag-img {
+    width: 100%;
   }
   .flag {
     width: 100%;
@@ -128,9 +155,29 @@
     align-items: center;
     justify-content: center;
   }
+  .info-detail {
+    width: 100%;
+  }
+  .title-text-alignment {
+    display: flex;
+    flex-flow: row;
+    align-items: center;
+    justify-content: center;
+  }
   .btn-back {
     button {
       margin: 2px;
     }
+  }
+  .border {
+    width: 100%;
+    p {
+      width: 100%;
+    }
+  }
+  .item-border {
+    display: flex !important;
+    flex-flow: column;
+    flex-wrap: wrap !important;
   }
 }
